Change the getProjectById method response